[package]
name = "mls_ap_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
openmls = "0.6.0"
openmls_basic_credential = "0.3.0"
openmls_rust_crypto = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
rusqlite = { version = "0.34.0", features = ["bundled"] }


[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
